# chatthy

./: .gitignore  Dockerfile  README.md  client.toml.example  pyproject.toml  server.toml.example
chatthy/: __init__.py  __main__.py  embeddings.hy
chatthy/client/: client-help.md  client.hy  interface.hy  ptk_app.hy  repl.hy  state.hy
chatthy/server/: chat.hy  commands.hy  completions.hy  rag.hy  server.hy  state.hy  tools.hy
